tests/ui/ast_term_from_function.stderr
error[E0506]: cannot assign to `fun` because it is borrowed
  --> $DIR/ast_term_from_function.rs:14:5
   |
9  |     let term3 = ast::Term::from(&fun);
   |                                 ---- borrow of `fun` occurs here
...
14 |     fun = ast::Function::new("name", &args).unwrap();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ assignment to borrowed `fun` occurs here
...
17 |     let _end = (term3, term4, fun, fun2);
   |                 ----- borrow later used here

error[E0506]: cannot assign to `fun2` because it is borrowed
  --> $DIR/ast_term_from_function.rs:15:5
   |
12 |     let term4 = ast::Term::external_function(&fun2);
   |                                              ----- borrow of `fun2` occurs here
...
15 |     fun2 = ast::Function::new("name", & args).unwrap();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ assignment to borrowed `fun2` occurs here
16 |     drop(args);
17 |     let _end = (term3, term4, fun, fun2);
   |                        ----- borrow later used here

error[E0505]: cannot move out of `args` because it is borrowed
  --> $DIR/ast_term_from_function.rs:16:10
   |
8  |     let mut fun = ast::Function::new("name", &args).unwrap();
   |                                              ----- borrow of `args` occurs here
...
16 |     drop(args);
   |          ^^^^ move out of `args` occurs here
17 |     let _end = (term3, term4, fun, fun2);
   |                               --- borrow later used here
